--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,2 @@
-travis encrypt "devops-rcf3741:bqQHl3Bc3uvzWLmJ9uFmZ3sV" --add notifications.slack
+notifications:
+  slack: devops-rcf3741:bqQHl3Bc3uvzWLmJ9uFmZ3sV
